set wider iframe button no longer needed, link set in iframe back to single alignment

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -104,26 +104,20 @@
   padding: 60px 0;
   text-align: center;
 }
-.Features-div {
-  margin:0 auto;
-  max-width: 750px;
-  min-height: 380px;
-}
 .Features-text {
-  font-size: 17px;
+  font-size: 16px;
   color: #3C5675;
-  max-width: 45%;
-  float: left;
-  margin-top: 8%;
-  text-align: left;
-}
-.Features-ifr {
-  float: right;
+  max-width: 880px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  text-align: center;
 }
 .Features iframe {
   border: #CCD6E4 2px solid;
   border-radius: 6px;
-  height: 375px;
+  height: 385px;
+  width: 400px;
 }
 .Features-actions .Button {
   border-color: #31A3DD;
@@ -139,17 +133,9 @@
   .Features {
     padding: 30px 0;
   }
-  .Features-ifr {
-    float: none;
-  }
   .Features-text {
-    max-width: 100%;
-    float: none;
-    text-align: center;
+    max-width: 98%;
     margin-top: 0%;
-  }
-  .Features-actions .Button {
-    float: none;
   }
 }
 
